implemented gui login/register

--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -1,3 +1,14 @@
 body {
   background: red;
 }
+
+
+
+
+.userForm input.ng-invalid.ng-touched {
+  background-color: #FA787E;
+}
+
+.userForm input.ng-valid.ng-touched {
+  background-color: #78FA89;
+}
