--- a/Server/public/css/styles.css
+++ b/Server/public/css/styles.css
@@ -1,2 +1,8 @@
 body {
   background: red; }
+
+.userForm input.ng-invalid.ng-touched {
+  background-color: #FA787E; }
+
+.userForm input.ng-valid.ng-touched {
+  background-color: #78FA89; }
