--- a/Server/public/views/viewRecipe.tpl.html
+++ b/Server/public/views/viewRecipe.tpl.html
@@ -11,6 +11,10 @@ Author: {{viewRecipeCtrl.recipe.author.name}}<br/>
 Anzahl Personen: {{viewRecipeCtrl.recipe.numPerson}}<br/>
 Backzeit: {{viewRecipeCtrl.recipe.bakingTime | minutesToHoursMinutes}}<br/>
 Vorbereitungszeit: {{viewRecipeCtrl.recipe.preparationTime | minutesToHoursMinutes}}<br/>
+Images:
+<div ng-repeat="image in viewRecipeCtrl.recipe.images">
+    <img ng-src="{{image.src}}" width="300"/>
+</div>
 
 
 <!-- TODO roles: roleController:  -->
