render recipe ratings in recipe view

--- a/Server/public/views/viewRecipe.tpl.html
+++ b/Server/public/views/viewRecipe.tpl.html
@@ -19,3 +19,6 @@ Images:
 
 
 <!-- TODO roles: roleController:  -->
+
+
+<fb-list-recipe-ratings data-recipe-id="{{viewRecipeCtrl.recipe.id}}"></fb-list-recipe-ratings>
