--- a/Server/public/views/viewRecipe.tpl.html
+++ b/Server/public/views/viewRecipe.tpl.html
@@ -2,7 +2,7 @@ Rezept ansehen
 <br/>
 <br/>
 <div ng-controller="SessionController as sessionCtrl">
-    <a href="#/editRecipe/{{viewRecipeCtrl.recipe.id}}" ng-show="sessionCtrl.isLoggedIn(viewRecipeCtrl.recipe.author.id)" g>EDIT</a>
+    <a href="#/editRecipe/{{viewRecipeCtrl.recipe.id}}" ng-show="sessionCtrl.isLoggedIn(viewRecipeCtrl.recipe.author.id)">EDIT</a>
 </div>
 <br/>
 <br/>
