--- a/Server/public/css/style-temp.css
+++ b/Server/public/css/style-temp.css
@@ -1,12 +1,5 @@
 
 /*Login*/
-/*body {*/
-    /*background-image: url('pix/pfanni-bg.jpg');*/
-    /*background-size: cover;*/
-    /*background-attachment: fixed;*/
-    /*
-    /*margin: 0;*/
-/*}*/
 
 /*login*/
 
@@ -32,7 +25,7 @@ li{
 }
 
 .rezept1{
-    background-image: url('pictures/kafi_200q.jpg');
+    background-image: url('../pictures/kafi_200q.jpg');
     background-position: 50% 50%;
 }
 
@@ -45,7 +38,7 @@ li{
 .demo-card-square > .mdl-card__title {
     color: #fff;
     background:
-    url('../pix/kafi_600.jpg') bottom right 15% no-repeat #46B6AC;
+    url('../pictures/kafi_600.jpg') bottom right 15% no-repeat #46B6AC;
 }
 
 button{
@@ -56,7 +49,7 @@ button{
 /*details*/
 
 .img-detail{
-    background-image: url("pictures/pfanni_800.jpg");
+    background-image: url("../pictures/pfanni_800.jpg");
     min-height: 300px;
     height: 100%;
     background-size: contain;
