--- a/Server/public/views/viewUser.tpl.html
+++ b/Server/public/views/viewUser.tpl.html
@@ -5,4 +5,4 @@ Mein Account
 <br/>
 <br/>
 Meine Rezepte:
-<fb-search-resultlist data-user="{{viewUserCtrl.user.id}}"></fb-search-resultlist>
+<fb-search-resultlist data-user="{{viewUserCtrl.user._id}}"></fb-search-resultlist>
