cleanup mess with directives, controllers and routes

--- a/Server/public/views/searchRecipe.tpl.html
+++ b/Server/public/views/searchRecipe.tpl.html
@@ -2,8 +2,9 @@ Search
 
 <br/>
 <br/>
-<fb-search-form></fb-search-form>
+<fb-search-form recipe-filter="searchRecipeCtrl.recipeFilter"></fb-search-form>
 
 <br/>
 <br/>
-<fb-search-resultlist></fb-search-resultlist>
+<fb-search-resultlist recipes="searchRecipeCtrl.recipes"
+                      recipe-filter="searchRecipeCtrl.recipeFilter"></fb-search-resultlist>
