--- a/Server/public/views/viewUser.tpl.html
+++ b/Server/public/views/viewUser.tpl.html
@@ -1,8 +1,8 @@
 Mein Account
-<fb-user-details></fb-user-details>
+<fb-user-details user="viewUserCtrl.user"></fb-user-details>
 
 <br/>
 <br/>
 <br/>
 Meine Rezepte:
-<fb-search-resultlist data-user="{{viewUserCtrl.user._id}}"></fb-search-resultlist>
+<fb-search-resultlist recipe-filter="viewUserCtrl.recipeFilter"></fb-search-resultlist>
