implemented save (insert) of recipe

--- a/Server/public/views/addeditRecipe.tpl.html
+++ b/Server/public/views/addeditRecipe.tpl.html
@@ -1,10 +1,12 @@
+<div style="background-color: white">
+
+    <span ng-show="addRecipe">Rezept editieren</span>
+    <span ng-hide="addRecipe">Rezept hinzufügen</span>
 
 
-<span ng-show="true">Rezept editieren</span>
-<span ng-show="true">Rezept hinzufügen</span>
+    <input ng-model="addeditRecipeCtrl.recipe.title"/>
 
 
+    <button type="button" ng-click="addeditRecipeCtrl.save()">Save</button>
 
-<input ng-model="addeditRecipeCtrl.recipe.title"/>
-
-
+</div>
