--- a/Server/public/views/searchRecipe.tpl.html
+++ b/Server/public/views/searchRecipe.tpl.html
@@ -1,5 +1,8 @@
 Search
 
+
+<a href="#/addRecipe">ADD RECIPE</a>
+
 <br/>
 <br/>
 <fb-search-form recipe-filter="searchRecipeCtrl.recipeFilter"></fb-search-form>
