fix userView: load and list recipes by user

--- a/Server/public/views/viewUser.tpl.html
+++ b/Server/public/views/viewUser.tpl.html
@@ -5,4 +5,5 @@ Mein Account
 <br/>
 <br/>
 Meine Rezepte:
-<fb-search-resultlist recipe-filter="viewUserCtrl.recipeFilter"></fb-search-resultlist>
+<fb-search-resultlist recipes="viewUserCtrl.recipes"
+                      recipe-filter="viewUserCtrl.recipeFilter"></fb-search-resultlist>
