--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -1,21 +1,24 @@
+// test colors
+
 body {
   background: lightcyan;
+  font-family: 'Roboto', 'Helvetica', 'Arial', sans-serif;
 }
 
-
-
+.clear{
+  clear: both;
+}
 
 .userForm input.ng-invalid.ng-touched {
-  background-color: #FA787E;
+  background-color: #ffcdd2;
 }
 
 .userForm input.ng-valid.ng-touched {
   background-color: #78FA89;
 }
 
-
 .loginForm {
-  background-color: blueviolet;
+  //background-color: blueviolet;
 }
 
 .user-details {
@@ -23,11 +26,11 @@ body {
 }
 
 .registerForm {
-  background-color: bisque;
+  //background-color: bisque;
 }
 
 .searchForm {
-  background-color: #FA787E;
+  background-color: #ffcdd2;
 }
 
 .searchResultlist {
@@ -40,4 +43,139 @@ body {
 
 .listRecipeRatings {
   background-color: chartreuse;
+}
+
+
+// Header Navigatio
+.header-nav{
+  text-decoration: none;
+  font-size: 1rem;
+  letter-spacing: 0.05rem;
+  span{
+    padding-left: 0.5rem;
+  }
+}
+
+
+
+// Login Screen
+
+.outer-wrapper{
+  position: absolute;
+  background-image: url('/pictures/pfanni-bg.jpg');
+  background-size: cover;
+  background-attachment: fixed;
+  margin: 0;
+  top:0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+}
+
+
+input{
+  padding: 7px;
+  border: solid 1px #dcdcdc;
+  transition: box-shadow 0.3s, border 0.3s;
+  float:right;
+}
+
+input:focus{
+  border: solid 1px #707070;
+  box-shadow: 0 0 5px 1px #969696;
+}
+
+// general class for login cards
+.login-card-square.mdl-card{
+  width: 320px;
+  height: 340px;
+  margin-right: 60px;
+  margin-bottom: 60px;
+  padding: 1rem;
+
+  li{
+    list-style-type: none;
+    padding-bottom:22px ;
+  }
+  .formfeedback{
+    color: #a33;
+    font-style: italic;
+    border-radius: 3px;
+    border: 1px solid #333;
+    padding: 3px;
+    margin-top: 10px;
+  }
+}
+
+
+// login Form Card
+.loginForm{
+  padding: 7px;
+
+}
+
+
+// register Form Card
+.registerForm{
+    //background: #0b97c4;
+    //.formfeedback{
+    //  color: #a33;
+    //  font-style: italic;
+    //  border-radius: 2px;
+    //  border: 1px solid #aa3333;
+    //}
+}
+
+
+
+
+
+
+
+
+/* Search */
+
+.fb-layout{
+  margin: 0 auto;
+  max-width: 1200px;
+  width: 100%;
+}
+
+.rezept1{
+  background-image: url('../pictures/kafi_200q.jpg');
+  background-position: 50% 50%;
+}
+
+
+.demo-card-square.mdl-card {
+  width: 320px;
+  height: 320px;
+  margin-right: 20px;
+}
+
+.demo-card-square > .mdl-card__title {
+  color: #fff;
+  background:
+  url('../pictures/kafi_600.jpg') bottom right 15% no-repeat #46B6AC;
+}
+
+button{
+  margin: 0.25rem;
+}
+
+
+/*details*/
+
+.img-detail{
+  background-image: url("../pictures/pfanni_800.jpg");
+  min-height: 300px;
+  height: 100%;
+  background-size: contain;
+  background-repeat: no-repeat;
+}
+
+.fb-layout-detail{
+  margin: 0 auto;
+  max-width: 1200px;
+  width: 100%;
 }
