--- a/Server/public/views/addeditRecipe.tpl.html
+++ b/Server/public/views/addeditRecipe.tpl.html
@@ -1,12 +1,167 @@
-<div style="background-color: white">
+<div class="editRecipe">
+    <div class="mdl-grid">
+        <div class="mdl-cell--12-col">
+            <div>
+                <h3>Rezept bearbeiten</h3>
+            </div>
+            <div>
+                <span ng-show="addRecipe">Rezept editieren</span>
+                <span ng-hide="addRecipe">Rezept hinzufügen</span>
+                <button type="button" ng-click="addeditRecipeCtrl.save()">Save</button>
+                <input ng-model="addeditRecipeCtrl.recipe.title"/>
+            </div>
+        </div>
+    </div>
+    <div class="mdl-grid">
+        <div class="mdl-cell--6-col">
+            <h4>Erstes Bild</h4>
+            <img class="img-menu" src="../pictures/pfanni_800.jpg">
+            <div class="img-buttons">
+                <button class="mdl-button">Bilder hinzufügen</button>
 
-    <span ng-show="addRecipe">Rezept editieren</span>
-    <span ng-hide="addRecipe">Rezept hinzufügen</span>
+                <button class="mdl-button">Bild editieren</button>
+            </div>
+        </div>
+        <div class="mdl-cell--6-col">
+             <form>
+                 <div>
+                    <button class="mdl-button mdl-js-button mdl-button--accent mdl-button--raised" type="submit">Menu Speichern</button>
+                 </div>
+                    <h4>Rezeptname
+                        <input type="text" class="mdl-textfield__input" value="Spaghetti Carbonara" />
+                    </h4>
+                <div class="mdl-textfield mdl-js-textfield">
+                    <label>Menu Beschreibung</label>
+                    <textarea type="text" rows="2" class="mdl-textfield__input" id="menu-description"></textarea>
+                </div>
+                <div>
+                    <div>
+                        <h4>Kategorie</h4>
+                    </div>
+                    <div>
+                        <select>
+                            <option>Suppen</option>
+                            <option>Vorspeise</option>
+                            <option>Hauptgang</option>
+                            <option>Vegi</option>
+                            <option>Salate</option>
+                            <option>Dessert</option>
+                        </select>
+                    </div>
+                </div>
+                <hr />
+                <div>
+
+                    <h4>Kochzeit</h4>
+                    <select>
+                        <option>10 -20 min</option>
+                        <option>20 -30 min</option>
+                        <option>30 -40 min</option>
+                        <option>40 -50 min</option>
+                        <option>60 + min</option>
+                    </select>
+                </div>
+                <hr />
+                <div>
+                    <h4>Zubereitungszeit</h4>
+                    <select>
+                        <option>10 -20 min</option>
+                        <option>20 -30 min</option>
+                        <option>30 -40 min</option>
+                        <option>40 -50 min</option>
+                        <option>60 + min</option>
+                    </select>
+                </div>
+                <hr />
+                <div>
+                    <h4>Zubereitung</h4>
+                    <label>1. Schritt</label>
+                    <textarea type="text" rows="3" class="mdl-textfield__input" id="menu-step-1">Beschreibung 1. Schritt</textarea>
+                    <br />
+                    <label>2. Schritt</label>
+                    <textarea type="text" rows="3" class="mdl-textfield__input" id="menu-step-2">Beschreibung 2. Schritt</textarea>
+                    <br />
+                    <label>3. Schritt</label>
+                    <textarea type="text" rows="3" class="mdl-textfield__input" id="menu-step-3"> Beschreibung 3. Schritt</textarea>
+                    <br />
+                    <button class="mdl-button mdl-button--colored ">Weitere Schritte hinzufügen</button>
+                </div>
+                <hr />
+                <div>
+                   <h4>Zutaten</h4>
+                    <table>
+                        <thead>
+                            <tr>
+                                <td style="width: 15%;">Menge</td>
+                                <td style="width: 15%;">Einheit</td>
+                                <td style="width: 70%;">Zutat</td>
+                            </tr>
+                        </thead>
+                        <hr />
+                        <tr>
+                            <td>
+                            <div class="mdl-textfield mdl-js-textfield ingredient-count ">
+                                <input class="mdl-textfield__input" type="text" pattern="-?[0-9]*(\.[0-9]+)?" id="ingredient-count-1" />
+                                <label class="mdl-textfield__label" >Anzahl</label>
+                                <span class="mdl-textfield__error">Das ist keine Anzahl!</span>
+                            </div>
+                            </td>
+                            <td>
+                                <select>
+                                    <option>EL</option>
+                                    <option>TL</option>
+                                    <option>Prise</option>
+                                    <option>Gramm</option>
+                                    <option>Liter</option>
+                                    <option>Stück</option>
+                                </select>
+                            </td>
+                            <td>
+                                <input type="text" class="mdl-textfield__input">
+                                <label class="mdl-textfield__label" >Zutat</label>
+                            </td>
+                        </tr>
+                        <tr>
+                            <td>
+                                <div class="mdl-textfield mdl-js-textfield ingredient-count">
+                                    <input class="mdl-textfield__input" type="text" pattern="-?[0-9]*(\.[0-9]+)?" id="ingridient-count-2" />
+                                    <label class="mdl-textfield__label" >Anzahl</label>
+                                    <span class="mdl-textfield__error">Das ist keine Anzahl!</span>
+                                </div>
+                            </td>
+                            <td>
+                                <select>
+                                    <option>EL</option>
+                                    <option>TL</option>
+                                    <option>Prise</option>
+                                    <option>Gramm</option>
+                                    <option>Liter</option>
+                                    <option>Stück</option>
+                                </select>
+                            </td>
+                            <td>
+                                <input type="text" class="mdl-textfield__input">
+                                <label class="mdl-textfield__label" >Zutat</label>
+                            </td>
+                        </tr>
+                        <tr>
+                            <td>&nbsp;</td>
+                            <td>&nbsp;</td>
+                            <td><button class="mdl-button  mdl-button--raised">Zutat hinzufügen</button> </td>
+                        </tr>
+                    </table>
+                </div>
+            </form>
+        </div>
+
+    </div>
 
 
-    <input ng-model="addeditRecipeCtrl.recipe.title"/>
 
 
-    <button type="button" ng-click="addeditRecipeCtrl.save()">Save</button>
+
+
+
+
 
 </div>
